Fixed navbar brand size on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -72,6 +72,11 @@
     font-size: 2rem;
 }
 
+@media (max-width: 600px) {
+    #brand {
+        font-size: 1.5rem;
+    }
+ 
 #links {
     font-family: 'Dosis', sans-serif;
     font-size: 1.5rem;
